# CODAvision

./:  README.md  .gitignore  1_determine_optimal_TA.ipynb  4.1  CLAUDE.md  CODA.py  CODA.ui  CODAGUI_bend.py  CODAGUI_fend.py  CODA_template_liver.ipynb  CODA_template_liver_CNNs.ipynb  CODA_template_lung.ipynb  CODA_template_lung_CNNs.ipynb  CODA_template_mouselivertif_CNNs.ipynb  CODA_template_pancreas.ipynb  CODA_template_pancreas_vm.ipynb  CODA_template_skin.ipynb  CODA_template_yasminlung_CNNs.ipynb  CODAvision.py  DeepLabV3.py  JUPITER_IS_BETER_THAN_PY.ipynb  Jaime.gitignore  LICENSE.txt  MODEL_PLUGIN_ARCHITECTURE.md  Plot_confussion_matrix.py  README.md  SG_013_0061.xml  Semanticseg.py  WSI2png.py  WSI2tif.py  augment_annotation.py  calculate_tissue_mask.py  check_if_model_parameters_changed notebook.ipynb  check_if_model_parameters_changed.py  classify_im_fend.py  classify_images.ipynb  classify_images.py  classify_images_VM_copy_08192024.py  combine_annotations_into_tiles notebook.ipynb  combine_annotations_into_tiles.ipynb  (+61 more)
CODA UI old/: CODA.py  GUI_fend.py
base/: CODA.py  CODAGUI_fend.py  Plot_confussion_matrix.py  Semanticseg.py  WSI2png.py  WSI2tif.py  __init__.py  augment_annotation.py  backbones.py  backbones_old.py  calculate_class_weights.py  calculate_tissue_mask.py  check_if_model_parameters_changed.py  classify_im.py  classify_im_fend.py  classify_images.py  combine_annotations_into_tiles.py  combine_annotations_into_tiles_VM.py  config.py  create_output_pdf.py  create_training_tiles.py  dark_theme.qss  determine_optimal_TA.py  determine_optimal_TA_UIs.py  edit_annotation_tiles.py  format_white.py  image_utils.py  import_xml.py  lego.py  load_annotation_data.py  load_annotations.py  logger.py  make_overlay.py  optimize_TA_old.py  plot_cmap_legend.py  quantify_images.py  quantify_objects.py  save_annotation_mask.py  save_bounding_boxes.py  save_model_metadata.py  (+5 more)
base/data/: __init__.py  annotation.py  geojson2xml.py  loaders.py  loaders_pytorch.py  tiles.py
base/evaluation/: __init__.py  confusion_matrix.py  image_quantification.py  object_quantification.py  pdf_report.py  reporting.py  testing.py  visualize.py
base/gui/: __init__.py  utils.py
base/image/: __init__.py  augmentation.py  classification.py  segmentation.py  tissue_analysis.py  utils.py  wsi.py
base/models/: backbones.py  backbones_pytorch.py  backbones_tf.py  base.py  diagnostics.py  metadata.py  training.py  training_pytorch.py  utils.py  wrappers.py
base/tissue_area/: __init__.py  models.py  threshold.py  threshold_core.py  utils.py
base/tissue_area/gui/: dialogs.py
base/utils/: __init__.py  logger.py  metadata.py  visualization.py  xml_handler.py
codigos varios/: Ecmo image.ipynb  convert_.tif_to_.png.ipynb  delete.ipynb  loop CNNs.ipynb  monitor folder.ipynb
codigos varios/loop 5 models delete/: 5 models loop.ipynb  loop CNNs.ipynb
codigos varios/loop 5 models delete/base/: WSI2tif.py  __init__.py  augment_annotation.py  classify_images.py  create_training_tiles.py  import_xml.py  load_annotations.py  quantify_objects.py  save_model_metadata.py  save_model_metadata_GUI.py  train_segmentation_model_cnns.py
codigos varios/loop 5 models delete/base_cnns/: Semanticseg.py  WSI2png.py  backbones.py  check_if_model_parameters_changed.py  determine_optimal_TA.py  determine_optimal_TA_UIs.py  format_white.py  make_overlay.py  plot_cmap_legend.py  train_segmentation_model.py  train_segmentation_model_cnns.py
docs/: ANNOTATION_PROCESSING.md  ML_WORKFLOW.md  MODEL_PLUGIN_ARCHITECTURE.md
gui/: __init__.py  application.py  utils.py
gui/components/: __init__.py  classification_window.py  dialogs.py  main_window.py  tissue_analysis_dialog.py  ui_definitions.py
gui/tissue_area/: __init__.py  dialogs.py  threshold_gui.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
scripts/: check_cuda_version.py  combine_lr_fix_results.py  display_annotations.py  generate_incomplete_search_figures.py  generate_search_figures.py  hyperparameter_search.py  hyperparameter_utils.py  lr_investigation.py  lr_investigation_report.py  monitor_resources.py  non-gui_workflow.py  overlay_annotations.py  regression_ablation_results.md  run_cross_framework_comparison.py  run_regression_ablation.py  run_version_comparison.py  test_epoch_comparison.py  test_gpu_configurations.py
tests/: __init__.py  conftest.py  requirements-test.txt  test_create_output_pdf.py  test_plot_cmap_legend.py
tests/integration/: __init__.py  test_pytorch_workflow.py  test_tile_workflow.py
tests/test_gui/: __init__.py  mock_dialogs.py  test_tissue_area_gui.py
tests/test_integration/: test_tissue_area_workflow.py
tests/test_tissue_area/: test_threshold_functionality.py
tests/unit/: __init__.py  test_framework_model_resolution.py  test_l2_regularization.py  test_matlab_alignment.py  test_pytorch_models.py  test_pytorch_training.py  test_tile_config.py  test_validation_frequency.py
tests/unit/evaluation/: __init__.py  test_pdf_report.py
