[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CODAvision"
version = "0.1.0"
description = "CODAvision is an open-source Python package designed for medical image labeling."
readme = "README.md"
license = {file = "LICENSE.txt" }

authors = [
    { name = "Valentina Matos-Romero", email = "vmatosr1@jh.edu" },
    { name = "Ashley Kiemen", email = "kiemen@jhmi.edu" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Image Recognition"
]

keywords = ["medical imaging", "image labeling", "machine learning", "deep learning", "tissue labeling"]

dependencies = [

    "numpy==1.23.5",
    "pillow==10.4.0",
    "tensorflow==2.10.1",
    "tensorflow-gpu==2.10.0",
    "keras==2.10.0",
    "opencv-python==4.10.0.84",
    "matplotlib==3.9.2",
    "scipy==1.13.1",
    "scikit-image==0.24.0",
    "xmltodict==0.13.0",
    "pandas==2.2.2",
    "seaborn==0.13.2",
    "tifffile==2024.8.28",
    "jupyter==1.1.1",
    #"pip==24.2",
    "attrs==24.2.0",
    "wheel==0.43.0",
    "tornado==6.4.1",
    "jinja2==3.1.4",
    "setuptools==72.1.0",
    "packaging==24.1",
    "zipp==3.20.1",
    "openslide-python==1.3.1",
    "openslide-bin",
    "openpyxl==3.1.2",
    "GPUtil==1.4.0",
    "PySide6==6.5.1.1",
    "pydicom",
    "fpdf==1.7.2",
    ]

requires-python = ">=3.9,<3.10"

[project.urls]
Homepage = "https://github.com/Valentinamatos/CODA_python"
Documentation = "https://github.com/Valentinamatos/CODA_python#readme"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["*.ipynb", "*.qss"]

[project.scripts]
CODAvision = "CODAvision:main"
